--- a/charts/portal/templates/configmap-backend-seeding-initialdata.yaml
+++ b/charts/portal/templates/configmap-backend-seeding-initialdata.yaml
@@ -24,7 +24,7 @@ metadata:
   name:  "{{ include "portal.fullname" . }}-default-initialdata"
   namespace: {{ .Release.Namespace }}
 data:
-  addresses.test.json: |-
+  addresses.json: |-
     [
       {
         "id": "b4db3945-19a7-4a50-97d6-e66e8dfd04fb",
@@ -39,7 +39,7 @@ data:
         "country_alpha2code": "DE"
       }
     ]
-  companies.test.json: |-
+  companies.json: |-
     [
       {
         "id": "2dc4249f-b5ca-4d42-bef1-7a7a950a4f87",
