fix(dim): adjust dim configuration to enable other idps
adjusted the configuration for the dim middle layer to be configureable to use other idps than the central idp

Refs: #373

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -232,7 +232,7 @@ spec:
             - name: "APPLICATIONCHECKLIST__DIM__SCOPE"
               value: "{{ .Values.backend.processesworker.dim.scope }}"
             - name: "APPLICATIONCHECKLIST__DIM__TOKENADDRESS"
-              value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.tokenPath }}"
+              value: "{{ .Values.dimWrapper.tokenAddress }}"
             - name: "APPLICATIONCHECKLIST__DIM__BASEADDRESS"
               value: "{{ .Values.dimWrapper.baseAddress }}{{ .Values.dimWrapper.apiPath }}"
             - name: "APPLICATIONCHECKLIST__DIM__UNIVERSALRESOLVERADDRESS"
