--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -88,9 +88,28 @@ dimWrapper:
 
 decentralIdentityManagementAuthAddress: "https://dis-integration-service-prod.eu10.dim.cloud.sap/api/v2.0.0/iatp/catena-x-portal"
 
+# -- Set information related to the operator company
 operator:
   # -- The bpn of the operator
   bpn: "empty"
+  # -- The name of the operator
+  name: "CX-Operator"
+  # -- The shortname of the operator
+  shortname: "CX-Operator"
+  # -- The city of the operator address
+  city: "15"
+  # --The region of the operator address
+  region: ""
+  # -- Additional street information of the operator address
+  streetadditional: ""
+  # -- The street name of the operator address
+  streetname: "tbd"
+  # -- The street number of the operator address
+  streetnumber: ""
+  # -- The zipcode of the operator address
+  zipcode: ""
+  # -- The alpha 2 code of the operator address
+  country_alpha2code: "DE"
 
 frontend:
   ingress:
@@ -625,9 +644,9 @@ backend:
         cpu: 75m
         memory: 350M
     seeding:
-      # -- Enables dynamic seeding of bpn (dim.bpn) and did document location address (dim.didDocumentLocationAddress) of the operator;
+      # -- Enables dynamic seeding of information related to the operator company: operator.bpn, operator.name, operator.city etc.;
       # If set to `true` the data configured in the config map 'configmap-seeding-initialdata.yaml' will be taken to insert the initial data;
-      useInitial: false
+      useInitial: true
       # -- Option to seed test data provided in a configMap
       seedTestData:
         # -- If set to true the data configured in the config map 'configmap-backend-seeding-testdata.yaml' will be taken to insert the default test data
