--- a/charts/portal/templates/configmap-backend-seeding-initialdata.yaml
+++ b/charts/portal/templates/configmap-backend-seeding-initialdata.yaml
@@ -21,7 +21,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name:  "{{ include "portal.fullname" . }}-default-initialdata"
+  name:  "{{ include "portal.fullname" . }}-initial-data"
   namespace: {{ .Release.Namespace }}
 data:
   addresses.json: |-
