chore: enable seeding of default test data for localdev

--- a/charts/localdev/values.yaml
+++ b/charts/localdev/values.yaml
@@ -210,6 +210,9 @@ portal:
       resources:
         limits:
           cpu: 200m
+      seeding:
+        seedTestData:
+          useDefault: true
     provisioningmigrations:
       logging:
         default: "Debug"
