fix: add config values for external service information
Ref: #459

--- a/charts/portal/templates/deployment-backend-services.yaml
+++ b/charts/portal/templates/deployment-backend-services.yaml
@@ -243,6 +243,12 @@ spec:
           value: "{{ .Values.centralidp.clients.portal }}"
         - name: "SERVICES__COMPANYADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.companyAdminRoles.role0 }}"
+        - name: "SERVICES__DECENTRALIDENTITYMANAGEMENTAUTHURL"
+          value: "{{ .Values.decentralIdentityManagementAuthAddress }}"
+        - name: "SERVICES__ISSUERDID"
+          value: "{{ .Values.backend.administration.issuerdid }}"
+        - name: "SERVICES__BPNDIDRESOLVERURL"
+          value: "{{ .Values.bpnDidResolver.directoryApiAddress }}"
         - name: "SERVICES__DIMUSERROLES__0__CLIENTID"
           value: "{{ .Values.centralidp.clients.technicalRolesManagement }}"
         - name: "SERVICES__DIMUSERROLES__0__USERROLENAMES__0"
