--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -961,6 +961,11 @@ backend:
     bpnDidResolver:
       # -- ApiKey for management endpoint of the bpnDidResolver. Secret-key 'bpndidresolver-api-key'.
       apiKey: ""
+      # -- Auth settings of the bpnDidResolver
+      grantType: "client_credentials"
+      clientId: ""
+      clientSecret: ""
+      scope: "openid"
     invitation:
       invitedUserInitialRoles:
         role0: "Company Admin"
