--- a/environments/helm-values/values-stable.yaml
+++ b/environments/helm-values/values-stable.yaml
@@ -270,6 +270,8 @@ backend:
       clientSecret: "<path:portal/data/stable/iam/centralidp-client-secrets#portal-issuer-sa>"
     bpnDidResolver:
       apiKey: "<path:portal/data/bdrs-mgmt-api-key#content>"
+      clientId: "<path:portal/data/bdrs-mgmt-client-id#bdrsClientId>"
+      clientSecret: "<path:portal/data/bdrs-mgmt-client-secret#bdrsClientSecret>"
     invitation:
       encryptionConfigs:
         index0:
