chore(trivy): add options according to TRG 8.04 https://github.com/eclipse-tractusx/portal/issues/467

--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -57,6 +57,9 @@ jobs:
           format: "sarif"
           output: "trivy-results1.sarif"
           vuln-type: "os,library"
+          severity: 'CRITICAL,HIGH' # While vulnerabilities of all severities are reported in the SARIF output, the exit code and workflow failure are triggered only by these specified severities (CRITICAL or HIGH).
+          exit-code: '1' # Trivy exits with code 1 if vulnerabilities are found, causing the workflow step to fail.
+          limit-severities-for-sarif: true
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@f779452ac5af1c261dce0346a8f964149f49322b # v3.26.13
