--- a/charts/localdev/values-tls.yaml
+++ b/charts/localdev/values-tls.yaml
@@ -132,7 +132,7 @@ centralidp:
   keycloak:
     initContainers:
       - name: import
-        image: docker.io/tractusx/portal-iam:v4.0.0-alpha.1
+        image: docker.io/tractusx/portal-iam:v4.0.0-rc.1
         imagePullPolicy: IfNotPresent
         command:
           - sh
@@ -145,7 +145,7 @@ centralidp:
           - name: themes
             mountPath: /themes
       - name: init-certs
-        image: docker.io/bitnami/keycloak:23.0.7-debian-12-r1
+        image: docker.io/bitnami/keycloak:25.0.6-debian-12-r0
         imagePullPolicy: IfNotPresent
         command: ["/bin/bash"]
         args:
@@ -233,7 +233,7 @@ sharedidp:
   keycloak:
     initContainers:
       - name: import
-        image: docker.io/tractusx/portal-iam:v4.0.0-alpha.1
+        image: docker.io/tractusx/portal-iam:v4.0.0-rc.1
         imagePullPolicy: IfNotPresent
         command:
           - sh
@@ -250,7 +250,7 @@ sharedidp:
           - name: themes-catenax-shared-portal
             mountPath: /themes-catenax-shared-portal
       - name: init-certs
-        image: docker.io/bitnami/keycloak:23.0.7-debian-12-r1
+        image: docker.io/bitnami/keycloak:25.0.6-debian-12-r0
         imagePullPolicy: IfNotPresent
         command: ["/bin/bash"]
         args:
